2008-03-27 Martin Schaaf <mascha@ma-scha.de>

	* configure.ac
	* debian/changelog
	o bumb version to 0.4.0rc6

2008-03-27 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>

	* src/MMapArea.py
	Sync with trunk. Added selection box.

2008-03-25 Martin Schaaf <mascha@ma-scha.de>

	* src/TextThought.py
	* src/MMapArea.py
	* src/BaseThought.py
	* src/MainWindow.py
	* src/TextBufferMarkup.py
	o add font selection support for thoughts, fixes issue 79
	o change attributes instead of inserting, fixes hopefully issue 53

2008-03-25 Martin Schaaf <mascha@ma-scha.de>

	* configure.ac
	* debian/changelog
	o bumb version to 0.4.0rc5

2008-03-25 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>

	* src/utils.py
	* src/MapList.py
	* src/MainWindow.py
	* src/Browser.py
	* src/ImageThought.py
	* po/de.po
	* po/labyrinth.pot
	Export maps with images as tarball. Sync with trunk.

2008-03-25 Martin Schaaf <mascha@ma-scha.de>

	* src/ImageThought.py
	* src/TextThought.py
	* src/DrawingThought.py
	* src/utils.py
	o show a bigger border if a thought has extended info, fixes issue 33

2008-03-24 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>

	* src/MMapArea.py
	More optimizations for issue 55. Partial redraw is done on editing and
	selecting and off-screen clipping has been simplified.

2008-03-23 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>

	* src/Links.py
	Fixes issue 62. Links are not selected if not clicked. 

2008-03-23 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>

	* src/MMapArea.py
	Off-screen clipping works for other scale factors too, but only in
	horizontal direction.

2008-03-23 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>

	* src/MMapArea.py
	Fixed bug introduced with last revision.

2008-03-23 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>

	* src/MMapArea.py
	Don't draw off-screen thoughts. It is still a bit whacky and not working for
	scales other than 1.0.

2008-03-23 Martin Schaaf <mascha@ma-scha.de>

	* src/Browser.py